--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
-  width: 100%;
 }
 a {
 	color: orange;
@@ -51,6 +50,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 /* ====================== Navigation ====================== */
 nav {
+  display: flex;
   width: 100%;
   height: 80px;
   background-color: #252831;
@@ -70,9 +70,8 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 20px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -106,10 +105,12 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  padding: 10px 0 3px;
+  text-align: center;
   align-items: center;
+  width: 100%;
+  height: auto;
+  background-color: #252831;
 }
 .filter-options h2 {
   color: white;
@@ -132,6 +133,10 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -139,42 +144,43 @@ nav h1 a {
   text-align: center;
 }
 #restaurants-list li {
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
-  padding-bottom: 15px;
-  margin-left: 28px;
-  text-align: center;
-  width: 90%;
-}
-#restaurants-list div {
-  text-align: center;
-  margin: 20px;
-  background-color: #fff;
-  border: 2px solid #ccc;
+  min-height: 380px;
+  padding: 0 0 15px;
+  text-align: left;
+  border-top-left-radius: 42px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  min-height: auto;
   min-width: 100%;
+  border-top-left-radius: 40px;
 }
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
+  font-family: Arial, sans-serif;
+  font-size: 12pt;
+  font-weight: bolder;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
+  text-align: center;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
+  padding: 0 20px;
+  width: 40%;
+  text-align: left;
 }
 #restaurants-list li a {
   background-color: orange;
@@ -182,8 +188,8 @@ nav h1 a {
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+      margin: 15px 0 0;
+    padding: 10px 42px 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -212,7 +218,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -226,10 +232,12 @@ nav h1 a {
 }
 #restaurant-img {
 	width: 90%;
+  border-top-left-radius: 40px;
 }
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
+  text-align: center;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -244,42 +252,80 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 0;
+
 }
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
+  border-top-left-radius: 20px;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  background-color: #606060;
+  text-align: center;
 }
 #reviews-list {
   margin: 0;
   padding: 0;
 }
+.review{
+  background-color: red;
+  width: 100%;
+}
+.reviewerName {
+  color: #B9B9B9;
+  font-size: 20pt;
+  font-weight: 30;
+  letter-spacing: -1px;
+  padding-bottom: 1pt;
+  background-color: #606060;
+  text-align: center;
+  width: 100%;
+}
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 100%;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
-}
+  }
 #restaurant-hours td {
   color: #666;
+  margin: 0;
+  font-size: ;
+  text-align: center;
 }
-* {
-  box-sizing: border-box;
+.reviewDate, .reviewerName {
+  display: inline;
+  color: #B9B9B9;
+  background-color: #606060;
+  width: 100%;
+}
+.reviewDate{
+}
+#restaurant-hours tr {
+}
+.reviewerComment, .rating{
+  margin: 20px;
+}
+
+.rating{
+  background-color: #E08E00;
+  width: 45%;
+  border: solid;
+  border-radius: 4px;
+  border-color: #E08E00;
+  color: white;
+  text-align: center;
+  font-weight: bolder;
 }
