--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,8 +19,6 @@
 @media (max-width: 700px) {
 	section {
     	min-width: 85%;
-    	padding: 0;
-    	margin: 0;
 	}
 	.inside header {
 		position: static;
@@ -37,10 +35,19 @@
 	    width: 100%;
 	}
 	.inside #footer {
-		width: 100%;
+		width: 85%;
 		position: static;
 	}
 	#map {
 		position: static;
+	}
+}
+@media (max-width: 411px) {
+	.inside #footer {
+		width: 90%;
+		position: static;
+	}
+	.inside html {
+		overflow-x: hidden;
 	}
 }
